--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,13 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "form-data": "^4.0.5",
-    "google-auth-library": "^10.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
-    "node-fetch": "^2.7.0"
-  }
+  "@supabase/supabase-js": "^2.86.0",
+  "bcryptjs": "^3.0.3",
+  "cors": "^2.8.5",
+  "dotenv": "^17.2.3",
+  "express": "^5.1.0",
+  "form-data": "^4.0.5",
+  "jsonwebtoken": "^9.0.2",
+  "multer": "^2.0.2",
+  "node-fetch": "^2.7.0"
 }
